fix: increase map height on desktop while keeping smaller height on mobile
Fixes #895

--- a/website/public/app-ui/css/app.scss
+++ b/website/public/app-ui/css/app.scss
@@ -49,7 +49,13 @@
 }
 
 .leaflet-container {
-  height: 400px;
+  height: 200px;
+}
+
+@media screen and (min-width: 1024px) {
+  .leaflet-container {
+    height: 800px;
+  }
 }
 
 .leaflet-container-200 {
